# simple-robot

./: .gitignore  Cargo.toml  LICENSE  PIN_ASSIGNMENTS.md  README.md  build.rs  drive.rs  memory.x  orchestrate.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: PIN_ASSIGNMENTS.md  refactoring-summary.md
misc/: imu-dmp-migration-plan.md  refactor-plan.md
misc/KiCad/simple-robot/: #auto_saved_files#  _autosave-simple-robot_v01.kicad_pcb  fabrication-toolkit-options.json  fp-info-cache  simple-robot.kicad_pcb  simple-robot.kicad_prl  simple-robot.kicad_pro  simple-robot.kicad_sch  simple-robot.rules  simple-robot_v01.kicad_prl  ~simple-robot.kicad_pcb.lck
misc/KiCad/simple-robot/database/: project.db
misc/KiCad/simple-robot/plots/: simple-robot-B_Mask.gbr  simple-robot-B_Paste.gbr  simple-robot-B_Silkscreen.gbr  simple-robot-Back.gbr  simple-robot-Edge_Cuts.gbr  simple-robot-F_Mask.gbr  simple-robot-F_Paste.gbr  simple-robot-F_Silkscreen.gbr  simple-robot-Front.gbr  simple-robot-In1_Cu.gbr  simple-robot-In2_Cu.gbr  simple-robot-NPTH-drl_map.gbr  simple-robot-NPTH.drl  simple-robot-PTH-drl_map.gbr  simple-robot-PTH.drl  simple-robot-job.gbrjob
misc/KiCad/simple-robot/production/: bom.csv  designators.csv  fab_bom.csv  fab_designators.csv  fab_positions.csv  netlist.ipc  positions.csv
misc/KiCad/simple-robot/supply-sim/: supply-sim.kicad_prl  supply-sim.kicad_pro  supply-sim.kicad_sch
misc/KiCad/symbols/: common-hobby-things.kicad_sym
misc/KiCad/symbols/common-hobby-things.pretty/: 433Mhz RC Receiver.kicad_mod  LED RAGB.kicad_mod  Level shifter 4 bi-dir.kicad_mod  MPU 9265 IMU carrier board.kicad_mod  Pololu step-up converter 2.5-5.5V in 5V out.kicad_mod  Pololu step-up converter 2.5-5.5V in 6V out.kicad_mod  SSD1306.kicad_mod  TB6612FNG motor driver carrier.kicad_mod
misc/chassis/: 9g servo mount.3mf  9g servo mount.FCStd  ATTRIBUTION.md  BaseFrame - edit.3mf  BaseFrame - edit.FCStd  BaseFrame - edit.stl  IR Sensor mount.3mf  IR Sensor mount.FCStd  PCB mount.3mf  PCB mount.FCStd  PCB mounting base.3mf  PCB mounting base.FCStd  README.md  Riser.FCStd  battery holder.FCStd  battey holder bar.3mf  battey holder case.3mf  front sensor array.3mf  front sensor array.FCStd  hc-sr04 mount-BodyPocket001.3mf  hc-sr04 mount.3mf  hc-sr04 mount.FCStd  print project.3mf  track pin print project.3mf  track pin.3mf  track pinFCStd.FCStd
misc/chassis/proto-tank/: LICENSE.txt  README.txt
misc/scope/: scope workspace.dwf3work
src/: main.rs
src/system/: activity.rs  autonomous_command.rs  button_actions.rs  command.rs  drive_command.rs  event.rs  indicator.rs  mod.rs  motor.rs  resources.rs  state.rs
src/system/helper/: mod.rs  string_helper.rs
src/system/state/: calibration.rs  motion.rs  perception.rs  power.rs
src/task/: autonomous_drive.rs  battery_charge_read.rs  battery_charge_reader.rs  battery_indicator.rs  display.rs  distance.rs  distance_measure.rs  distance_measurement.rs  drive.rs  drive.rs.backup  encoder.rs  encoder_read.rs  flash_storage.rs  imu_read.rs  ir_obstacle_detect.rs  mod.rs  monitor_motion.rs  motor_driver.rs  orchestrate.rs  orchestrator.rs  port_expander.rs  rc_control.rs  rc_controller.rs  resources.rs  rgb_led_indicate.rs  rgb_led_indicator.rs  rotary_encoder.rs  scheduler.rs  sweep_ultrasonic.rs  system_events.rs  system_messages.rs  system_state.rs  testing.rs  track_inactivity.rs  ui_menu.rs
src/task/autonomous_mode/: coast_obstacle_avoid.rs  mod.rs
src/task/behavior/: battery.rs  inactivity.rs  input.rs  mod.rs  motion.rs  obstacle.rs  operation_mode.rs  sensor_events.rs
src/task/control/: mod.rs  rc_control.rs  rotary_encoder.rs
src/task/drive/: api.rs  brake_coast.rs  compensation.rs  distance.rs  drift.rs  feedback.rs  handlers.rs  intent.rs  lifecycle.rs  mod.rs  queue.rs  rotation.rs  state.rs  types.rs
src/task/drive/calibration/: imu.rs  mod.rs  motor.rs
src/task/drive/control/: mod.rs  motor_state.rs  rotation.rs  straight_line.rs  tilt.rs
src/task/drive/drift/: math.rs  mod.rs
src/task/drive/sensors/: control.rs  data.rs  mod.rs
src/task/indicators/: mod.rs  rgb_led_indicate.rs
src/task/initialization/: mod.rs
src/task/io/: display.rs  flash_storage.rs  mod.rs  port_expander.rs
src/task/sensors/: encoders.rs  imu.rs  ir_obstacle.rs  mod.rs  ultrasonic.rs
src/task/testmode/: basic_motor.rs  imu.rs  imu_6axis.rs  imu_9axis.rs  ir_ultrasonic.rs  mod.rs  sequence.rs  testing.rs  ultrasonic_sweep.rs
src/task/ui/: menu.rs  mod.rs  render.rs  screens.rs  state.rs  ui_menu.rs
test-modules/: Cargo.toml
test-modules/.cargo/: config.toml
test-modules/.zed/: settings.json
test-modules/src/: main.rs
