[package]
name = "simple-robot"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Rafael Koch <rafael.koch@gmx.net>"]
description = "A simple tracked robot that can move around in RC or autonomous mode with basic sensors"
readme = "README.md"
repository = "https://github.com/1-rafael-1/simple-robot"

[profile.dev]
lto = true
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
opt-level = "z"
overflow-checks = true

[profile.dev.package."*"] # Minimize the size of dependencies
opt-level = 's'
overflow-checks = false
debug = true
debug-assertions = false

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = true
lto = 'fat'
opt-level = 's'
overflow-checks = false

[dependencies]
embassy-rp = { version = "0.3", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
] }
embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.7", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-futures = { version = "0.1" }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nanorand = { version = "0.7.0", features = [
    "wyrand",
], default-features = false }
assign-resources = "0.4.1"
hcsr04_async = { version = "^0.3.2", features = ["blocking_trigger"] }
moving_median = "0.2.0"
tb6612fng = "1.0.0"
ssd1306-async = { git = "https://github.com/kalkyl/ssd1306-async" }
embedded-graphics = "0.8.1"
static_cell = { version = "2.1.0", features = [] }
heapless = "0.8.0"
micromath = "2.1.0"

# [patch.crates-io]
# embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
# embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
# embassy-time = { git = "https://github.com/embassy-rs/embassy" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
