[package]
name = "simple-robot"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Rafael Koch <rafael.koch@gmx.net>"]
description = "A simple tracked robot that can move around in RC or autonomous mode with basic sensors"
readme = "README.md"
repository = "https://github.com/1-rafael-1/simple-robot"

[profile.dev]
lto = true
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = true
lto = 'fat'
opt-level = 's'

[dependencies]
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
] }
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-futures = { version = "0.1.2" }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
nanorand = { version = "0.8.0", features = [
    "wyrand",
], default-features = false }
hcsr04_async = { version = "^0.4.0", features = ["blocking_trigger"] }
moving_median = "0.3.0"
ssd1306-async = { git = "https://github.com/kalkyl/ssd1306-async" }
embedded-graphics = "0.8.1"
static_cell = { version = "2.1.1", features = [] }
heapless = "0.9.2"
micromath = "2.1.0"
libm = "0.2"
icm20948-rs = { version = "0.1.1", features = ["async", "defmt"] }
ahrs = { version = "0.8", default-features = false }
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }
port-expander = "0.6.5"
embedded-hal-async = "1.0.0"
sequential-storage = "3.0.0"
embedded-storage-async = "0.4.1"

# [patch.crates-io]
# embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
# embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
# embassy-time = { git = "https://github.com/embassy-rs/embassy" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
