[package]
name = "test-modules"
version = "0.1.0"
edition = "2024"
license = "MIT"

[profile.dev]
lto = true
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = true
lto = 'fat'
opt-level = 's'

[dependencies]
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
